--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
                 <input type="text" class="st-input" value= "2 odrasla  ·  0 dece  ·  1 jedinica">
                 <i class="fas fa-user-alt"></i>
             </div>
-            <div class="st-search">
+            <div class="st-search-btn">
                 <input type="button" class="st-input" value= "Traži">
             </div>
             <div class="st-bussiness">
                 <input type="checkbox" class="st-input">
+                <span>Putujem poslovno</span>
             </div>
         </div>
     </div>
