--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="st-bottom">
             <span class="st-accommadation st-selected">
-                <i class="fas fa-building"></i>   Smeštaj
+                <i class="fas fa-building"></i> Smeštaj
             </span>
             <span class="st-flight st-unselected">
                 <i class="fas fa-plane-departure"></i> Letovi
@@ -31,7 +31,7 @@
                 <i class="fas fa-car"></i> Iznajmljivanje automobila
             </span>
             <span class="st-tour st-unselected">
-                <i class="fas fa-dharmachakra"></i>  Obilasci i aktivnosti
+                <i class="fas fa-dharmachakra"></i> Obilasci i aktivnosti
             </span>
             <span class="st-taxi st-unselected">
                 <i class="fas fa-taxi"></i> Taksi od/do aerodroma
@@ -40,27 +40,42 @@
     </div>
     <div class="st-search">
         <div class="st-search-content">
-            <p class = "st-important">Pronađite ponude za svaku sezonu</p>   
-            <p class = "st-description">Od udobnih seoskih kuća do šik gradskih stanova</p>
+            <p class="st-important">Pronađite ponude za svaku sezonu</p>
+            <p class="st-description">Od udobnih seoskih kuća do šik gradskih stanova</p>
             <div class="st-location">
-                <input type="text" class="st-input" value= "Sankt Peterburg">
+                <input type="text" class="st-input" value="Sankt Peterburg">
                 <i class="fas fa-bed"></i>
             </div>
             <div class="st-date">
-                <input type="text" class="st-input" value= "Prijavljivanje - Odjavljivanje">
+                <input type="text" class="st-input" value="Prijavljivanje - Odjavljivanje">
                 <i class="far fa-calendar-alt"></i>
             </div>
             <div class="st-count">
-                <input type="text" class="st-input" value= "2 odrasla  ·  0 dece  ·  1 jedinica">
+                <input type="text" class="st-input" value="2 odrasla  ·  0 dece  ·  1 jedinica">
                 <i class="fas fa-user-alt"></i>
             </div>
             <div class="st-search-btn">
-                <input type="button" class="st-input" value= "Traži">
+                <input type="button" class="st-input" value="Traži">
             </div>
             <div class="st-bussiness">
                 <input type="checkbox" class="st-input">
                 <span>Putujem poslovno</span>
             </div>
+        </div>
+    </div>
+    <div class="st-special-offer">
+        <img src="/img/special.png" alt=" ">
+        <p class="st-bold">Vansezonske ponude</p>
+        <p class="st-description">Raspust je gotov, ali vaš odmor nije. Ušteda od 20% tokom septembra i oktobra.</p>
+        <input type="button" value="Ponude">
+        <i class="fas fa-times"></i>
+    </div>
+    <div class="st-images">
+        <div class="st-image-holder">
+            <img src="/img/zlatibor.jpg" alt=" " class="st-zlatibor">
+            <p class="st-title">Sankt Peterburg <img src="/img/flag-russia.png" alt=" "></p>
+            <p class="st-objects">Najbolji razlog za posetu: <br>
+            <span>arhitektura, razgledanje, setnje gradom</span></p>
         </div>
     </div>
 
