--- a/index.html
+++ b/index.html
@@ -72,12 +72,21 @@
     </div>
     <div class="st-images">
         <div class="st-image-holder">
-            <img src="/img/zlatibor.jpg" alt=" " class="st-zlatibor">
-            <p class="st-title">Sankt Peterburg <img src="/img/flag-russia.png" alt=" "></p>
-            <p class="st-objects">Najbolji razlog za posetu: <br>
-            <span>arhitektura, razgledanje, setnje gradom</span></p>
+            <div class="st-first">
+                <img src="/img/peterburg.jpg" alt=" " class="st-sankt">
+                <p class="st-title">Sankt Peterburg <img src="/img/flag-russia.png" alt=" "></p>
+                <p class="st-objects">Najbolji razlog za posetu: <br>
+                    <span>arhitektura, razgledanje, setnje gradom</span></p>
+                    <p class = "st-check">Da li ste jos uvek zainteresovani za svoje prethodne pretrage na destinaciji
+                        Sankt Peterburg?</p>
+                        <p class="st-suggestion"><span class="st-date">1 apr. - 5 apr.</span> 1 soba, 2 odrasle osobe </p>
+                        <i class="fas fa-times"></i>
+            </div>
+            <div class="st-second">
+                <img src="/img/moskva.png" alt=" " class="st-moskva">
+                <p class="st-title">Moskva <img src="/img/flag-russia.png" alt=" "></p>
+                <p class="st-objects">8 527 smeštajnih objekata </p>
+            </div>
         </div>
     </div>
-
-
 </body>
