--- a/index.html
+++ b/index.html
@@ -73,20 +73,80 @@
     <div class="st-images">
         <div class="st-image-holder">
             <div class="st-first">
-                <img src="/img/peterburg.jpg" alt=" " class="st-sankt">
                 <p class="st-title">Sankt Peterburg <img src="/img/flag-russia.png" alt=" "></p>
                 <p class="st-objects">Najbolji razlog za posetu: <br>
                     <span>arhitektura, razgledanje, setnje gradom</span></p>
-                    <p class = "st-check">Da li ste jos uvek zainteresovani za svoje prethodne pretrage na destinaciji
-                        Sankt Peterburg?</p>
-                        <p class="st-suggestion"><span class="st-date">1 apr. - 5 apr.</span> 1 soba, 2 odrasle osobe </p>
-                        <i class="fas fa-times"></i>
+                <p class="st-check">Da li ste jos uvek zainteresovani za svoje prethodne pretrage na destinaciji
+                    Sankt Peterburg?</p>
+                <div class="st-suggestion">
+                    <p class="st-date">1 apr. - 5 apr.</p>
+                    <p class="st-room"> 1 soba, 2 odrasle osobe</p>
+                    <i class="fas fa-times"></i>
+                </div>
+                <div class="st-icon-holder"><i class="fas fa-times"></i></div>
             </div>
             <div class="st-second">
-                <img src="/img/moskva.png" alt=" " class="st-moskva">
+                <img src="/img/icon.png" alt=" " class="st-icon">
                 <p class="st-title">Moskva <img src="/img/flag-russia.png" alt=" "></p>
                 <p class="st-objects">8 527 smeštajnih objekata </p>
+                <p class="st-average-price">Prosečna cena<br> <span class="st-price">RSD 9.148</span></p>
+                <div class="st-icon-holder"><i class="fas fa-times"></i></div>
+
+            </div>
+        </div>
+        <div class="st-second-row">
+            <div class="st-first st-image">
+                <img src="/img/icon.png" alt=" " class="st-icon">
+                <p class="st-title">Kijev <img src="/img/flag-ukraine.png" alt=""> </p>
+                <p class="st-objects-number">3 763 smeštajnih objekata</p>
+                <p class="st-price">Prosečna cena <span>RSD 8.958</span></p>
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="st-second st-image">
+                <img src="/img/icon.png" alt=" " class="st-icon">
+                <p class="st-title">Riga <img src="/img/flag-latvia.png" alt=""> </p>
+                <p class="st-objects-number">1468 smeštajnih objekata</p>
+                <p class="st-price">Prosečna cena <span>RSD 10.960</span></p>
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="st-third st-image">
+                <img src="/img/icon.png" alt=" " class="st-icon">
+                <p class="st-title">Helsinki <img src="/img/flag-finland.ico" alt=""> </p>
+                <p class="st-objects-number">952 smeštajnih objekata</p>
+                <p class="st-price">Prosečna cena <span>RSD 22.998</span></p>
+                <i class="fas fa-times"></i>
             </div>
         </div>
     </div>
+    <div class="st-accommodation">
+        <p class="st-title">Milioni privatnih smeštaja, velikih i malih... a mislili ste da nudimo samo hotele</p>
+        <div class="st-sorts">
+            <div class="st-apartments st-type">
+                <img src="/img/apartments.png" alt=" ">
+                <p class="st-type">Apartmani</p>
+                <p class="st-ammount">801 162 apartmana</p>
+            </div>
+            <div class="st-resorts st-type">
+                <img src="/img/resorts.png" alt=" ">
+                <p class="st-type">Rizortovi</p>
+                <p class="st-ammount">21 463 odmarališta</p>
+            </div>
+            <div class="st-villas st-type">
+                <img src="/img/villas.png" alt=" ">
+                <p class="st-type">Vile</p>
+                <p class="st-ammount">397 747 vila</p>
+            </div>
+            <div class="st-cabins st-type">
+                <img src="/img/cabins.png" alt=" ">
+                <p class="st-type">Kolibe</p>
+                <p class="st-ammount">13 325 koliba</p>
+            </div>
+            <div class="st-cottages st-type">
+                <img src="/img/cottages.jpg" alt=" ">
+                <p class="st-type">Seoske kuće</p>
+                <p class="st-ammount">125 433 seoske kuće</p>
+            </div>
+        </div>
+
+    </div> 
 </body>
