--- a/index.html
+++ b/index.html
@@ -147,6 +147,40 @@
                 <p class="st-ammount">125 433 seoske kuće</p>
             </div>
         </div>
-
-    </div> 
+        <div class="st-private-rooms">
+            <p class="st-title">Više od hotela... otkrijte potpuni komfor uz privatni smeštaj</p>
+            <div class="st-offers">
+                <div class="st-domina">
+                    <img src="/img/domina.png" alt="">
+                    <p class="st-name">Villa Domina</p>
+                    <p class="st-location">Split</p>
+                    <p class="st-price">Od RSD 10.446</p>
+                    <p class="st-score"> <span class= "st-mark">9,6 </span><span class="st-desc"> &nbsp;&nbsp;Izuzetan </span><span class="st-rec-num">. 693 recenzija</span></p>
+                </div>
+                <div class="st-annabel">
+                    <img src="/img/annabel.png" alt="">
+                    <p class="st-name">Annabel's Luxury suites</p>
+                    <p class="st-location">Imerovigli</p>
+                    <p class="st-price">Od RSD 75.026</p>
+                </div>
+                <div class="st-elegant">
+                    <img src="/img/elegant.png" alt="">
+                    <p class="st-name">Elegat & Stylish Apartment city center</p>
+                    <p class="st-location">Budimpešta</p>
+                    <p class="st-price">Od RSD 50.941</p>
+                    <p class="st-score"> <span class= "st-mark">9,6 </span><span class="st-desc"> &nbsp;&nbsp;Izuzetan </span><span class="st-rec-num">. 64 recenzija</span></p>
+                </div>
+                <div class="st-belinskogo">
+                    <img src="/img/belinskogo.png" alt="">
+                    <p class="st-name">Apartments on Belinskogo ulitsa</p>
+                    <p class="st-location">Sankt Peterburg</p>
+                    <p class="st-price">Od RSD 34.177</p>
+                    <p class="st-score"> <span class= "st-mark">9,7 </span><span class="st-desc"> &nbsp;&nbsp;Izuzetan </span><span class="st-rec-num">. 32 recenzija</span></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="st-register">
+            
+    </div>
 </body>
