--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                     <p class="st-name">Villa Domina</p>
                     <p class="st-location">Split</p>
                     <p class="st-price">Od RSD 10.446</p>
-                    <p class="st-score"> <span class= "st-mark">9,6 </span><span class="st-desc"> &nbsp;&nbsp;Izuzetan </span><span class="st-rec-num">. 693 recenzija</span></p>
+                    <p class="st-score"> <span class="st-mark">9,6 </span><span class="st-desc"> &nbsp;&nbsp;Izuzetan
+                        </span><span class="st-rec-num">. 693 recenzija</span></p>
                 </div>
                 <div class="st-annabel">
                     <img src="/img/annabel.png" alt="">
@@ -168,19 +169,194 @@
                     <p class="st-name">Elegat & Stylish Apartment city center</p>
                     <p class="st-location">Budimpešta</p>
                     <p class="st-price">Od RSD 50.941</p>
-                    <p class="st-score"> <span class= "st-mark">9,6 </span><span class="st-desc"> &nbsp;&nbsp;Izuzetan </span><span class="st-rec-num">. 64 recenzija</span></p>
+                    <p class="st-score"> <span class="st-mark">9,6 </span><span class="st-desc"> &nbsp;&nbsp;Izuzetan
+                        </span><span class="st-rec-num">. 64 recenzija</span></p>
                 </div>
                 <div class="st-belinskogo">
                     <img src="/img/belinskogo.png" alt="">
                     <p class="st-name">Apartments on Belinskogo ulitsa</p>
                     <p class="st-location">Sankt Peterburg</p>
                     <p class="st-price">Od RSD 34.177</p>
-                    <p class="st-score"> <span class= "st-mark">9,7 </span><span class="st-desc"> &nbsp;&nbsp;Izuzetan </span><span class="st-rec-num">. 32 recenzija</span></p>
+                    <p class="st-score"> <span class="st-mark">9,7 </span><span class="st-desc"> &nbsp;&nbsp;Izuzetan
+                        </span><span class="st-rec-num">. 32 recenzija</span></p>
                 </div>
             </div>
         </div>
     </div>
     <div class="st-register">
-            
+        <img src="/img/register.png" alt=" ">
+        <p class="st-main">Registrujte se da biste videli Tajne ponude</p>
+        <p class="st-prices">Cene padaju onog trenutka kada se registrujete!</p>
+        <input type="email" placeholder="Unesite adresu e-pošte" id="">
+        <button>Prijavi me!</button>
     </div>
+    <div class="st-popular-destination">
+        <div class="st-vienna st-location">
+            <div class="st-image">
+                <img src="https://q-cf.bstatic.com/xdata/images/city/400x300/619929.webp?k=28bcea45fe947ebc3cf33a6d0140b4c7e2146185828fd9d5549578a4242f636f&o="
+                    alt="">
+                <div class="st-image-location">
+                    <p class="st-name">Beč</p>
+                    <p class="st-country">Austrija</p>
+                </div>
+            </div>
+            <p class="st-available">
+                1 908 smeštaja za odmor,<br>
+                1 785 apartmana,<br>
+                84 pansiona sa uslugom doručka,<br>
+                79 smeštaja u okviru domaćinstva,<br>
+                52 pansiona
+            </p>
+        </div>
+        <div class="st-budapest st-location">
+            <div class="st-image">
+                <img src="https://r-cf.bstatic.com/xdata/images/city/400x300/619905.webp?k=0a2f19df735a9fa7f00d7ff55f6e95f88c3832efbb0d524193cb226d8e98193f&o="
+                    alt="">
+                <div class="st-image-location">
+                    <p class="st-name">Budimpešta</p>
+                    <p class="st-country">Mađarska</p>
+                </div>
+            </div>
+            <p class="st-available">
+                4 154 smeštaja za odmor,<br>
+                3 911 apartmana,<br>
+                200 smeštaja u okviru domaćinstva,<br>
+                179 pansiona sa uslugom doručka,<br>
+                142 pansiona
+            </p>
+        </div>
+        <div class="st-rome st-location">
+            <div class="st-image">
+                <img src="https://r-cf.bstatic.com/xdata/images/city/400x300/613108.webp?k=68b7c2f8a49bf6be58d6477b6a95814beb9ca14366d9ed5565d5449fa7bda436&o= "
+                    alt="">
+                <div class="st-image-location">
+                    <p class="st-name">Rim</p>
+                    <p class="st-country">Italija</p>
+                </div>
+            </div>
+            <p class="st-available">
+                10 966 smeštaja za odmor,<br>
+                6 541 apartmana,<br>
+                3 602 pansiona sa uslugom doručka,<br>
+                2 164 smeštaja u okviru domaćinstva,<br>
+                2 080 pansiona
+            </p>
+        </div>
+        <div class="st-solun st-location">
+            <div class="st-image">
+                <img src="https://q-cf.bstatic.com/xdata/images/city/400x300/972700.webp?k=344e50e0f6714feea120428d68e00137ebff9566cac61dcd2cf25c86d897e2e0&o="
+                    alt="">
+                <div class="st-image-location">
+                    <p class="st-name">Solun</p>
+                    <p class="st-country">Grčka</p>
+                </div>
+            </div>
+            <p class="st-available">
+                1 110 smeštaja za odmor,<br>
+                1 093 apartmana,<br>
+                14 smeštaja u okviru domaćinstva,<br>
+                12 vikendica, 12 vila
+            </p>
+        </div>
+    </div>
+    <p class="st-more-destination">Još destinacija »</p>
+    <div class="st-favorite-destinations">
+        <p class="st-title">Destinacije koje volimo</p>
+        <div class="st-chosse-type">
+            <span class="st-regions st-selected">Regije</span>
+            <span class="st-cities st-unselected">Gradovi</span>
+            <span class="st-places-of-interest st-unselected">Znamenitosti</span>
+        </div>
+        <table class="st-destinations">
+            <tr>
+                <td>
+                    <span class="st-name">Vrujci</span><br>
+                    <span class="st-number">15 objekata</span>
+                </td>
+                <td>
+                    <span class="st-name">Srebrno jezero</span><br>
+                    <span class="st-number">39 objekata</span>
+                </td>
+                <td>
+                    <span class="st-name">Herceg novi</span><br>
+                    <span class="st-number">1 387 objekata</span>
+                </td>
+                <td>
+                    <span class="st-name">Sokobanja</span><br>
+                    <span class="st-number">253 objekta</span>
+                </td>
+                <td>
+                    <span class="st-name">Vrnjacka Banja</span><br>
+                    <span class="st-number">411 objekata</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <span class="st-name">Zlatar</span><br>
+                    <span class="st-number">79 objekata</span>
+                </td>
+                <td>
+                    <span class="st-name">Podgorica</span><br>
+                    <span class="st-number">513 objekata</span>
+                </td>
+                <td>
+                    <span class="st-name">Tivat</span><br>
+                    <span class="st-number">1 056 objekata</span>
+                </td>
+                <td>
+                    <span class="st-name">Skijatos</span><br>
+                    <span class="st-number">465 objekata</span>
+                </td>
+                <td>
+                    <span class="st-name">Nacionalni park Fruška gora</span><br>
+                    <span class="st-number">116 objekata</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <span class="st-name">Bar</span><br>
+                    <span class="st-number">2 170 objekata</span>
+                </td>
+                <td>
+                    <span class="st-name">Tara</span><br>
+                    <span class="st-number">269</span>
+                </td>
+                <td>
+                    <span class="st-name">Sunčev breg</span><br>
+                    <span class="st-number">3 578 objekata</span>
+                </td>
+                <td>
+                    <span class="st-name">Ulcinj</span><br>
+                    <span class="st-number">1 113 objekata</span>
+                </td>
+                <td>
+                    <span class="st-name">Ulcinj</span><br>
+                    <span class="st-number">954 objekta</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <span class="st-name">Žabljak</span><br>
+                    <span class="st-number">541 objekat</span>
+                </td>
+                <td>
+                    <span class="st-name">Banja Vrujci</span><br>
+                    <span class="st-number">17 objekata</span>
+                </td>
+                <td>
+                    <span class="st-name">Stara planina</span><br>
+                    <span class="st-number">74 objekta</span>
+                </td>
+                <td>
+                    <span class="st-name">Bali</span><br>
+                    <span class="st-number">12 073 objekta</span>
+                </td>
+                <td>
+                    <span class="st-name">Kotor</span><br>
+                    <span class="st-number">1 545 objekata</span>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="st-discover">Otkrijte</div>
 </body>
