--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         </div>
     </div>
     <div class="st-search">
+        <p class="st-important">Pronađite ponude za svaku sezonu</p>
+        <p class="st-description">Od udobnih seoskih kuća do šik gradskih stanova</p>
         <div class="st-search-content">
-            <p class="st-important">Pronađite ponude za svaku sezonu</p>
-            <p class="st-description">Od udobnih seoskih kuća do šik gradskih stanova</p>
             <div class="st-location">
                 <input type="text" class="st-input" value="Sankt Peterburg">
                 <i class="fas fa-bed"></i>
@@ -50,8 +50,14 @@
                 <input type="text" class="st-input" value="Prijavljivanje - Odjavljivanje">
                 <i class="far fa-calendar-alt"></i>
             </div>
+            <div class="st-low-res-date">
+                <input type="text" class="st-input" value="Prijavljivanje">
+                <i class="far fa-calendar-alt"></i>
+                <input type="text" class="st-input" value="Odjavljivanje">
+                <i class="far fa-calendar-alt"></i>
+            </div>
             <div class="st-count">
-                <input type="text" class="st-input" value="2 odrasla  ·  0 dece  ·  1 jedinica">
+                <input type="text" class="st-input st-persons" value="2 odrasla  ·  0 dece  ·  1 jedinica">
                 <i class="fas fa-user-alt"></i>
             </div>
             <div class="st-search-btn">
@@ -359,4 +365,155 @@
         </table>
     </div>
     <div class="st-discover">Otkrijte</div>
+    <div class="st-page-picker">
+        <span class="st-more">More destination</span>
+        <span class="st-page st-unselected">11</span>
+        <span class="st-page st-unselected">10</span>
+        <span class="st-page st-unselected">9</span>
+        <span class="st-page st-unselected">8</span>
+        <span class="st-page st-unselected">7</span>
+        <span class="st-page st-unselected">6</span>
+        <span class="st-page st-unselected">5</span>
+        <span class="st-page st-unselected">4</span>
+        <span class="st-page st-unselected">3</span>
+        <span class="st-page st-unselected">2</span>
+        <span class="st-page st-selected">1</span>
+    </div>
+    <div class="st-things-holder">
+        <div class="st-things-to-enjoy">
+            <div class="st-sad">
+                <img src="/img/USA.png" alt=" ">
+                <p class="st-text">Stvari u kojima morate uživati prilikom svoje sledeće posete destinaciji Sjedinjene
+                    Američke Države su relaksacija, restorani i šoping!</p>
+                <p class="st-location-name">Sjedinjene Američke Države</p>
+            </div>
+            <div class="st-italy">
+                <img src="/img/Italija.png" alt=" ">
+                <p class="st-text">Stvari u kojima morate uživati prilikom svoje sledeće posete destinaciji Italija su
+                    pejzaž, stari grad i hrana!</p>
+                <p class="st-location-name">Italija</p>
+            </div>
+            <div class="st-france">
+                <img src="/img/Francuska.png" alt=" ">
+                <p class="st-text">Stvari koje ne smete propustiti prilikom svoje sledeće posete destinaciji Francuska
+                    su tišina, pejzaž i stari grad!</p>
+                <p class="st-location-name">Francuska</p>
+            </div>
+            <div class="st-spain">
+                <img src="/img/Spanija.png" alt="">
+                <p class="st-text">Ako su tišina, hrana i stari grad vaš način da prijatno provedete vreme, onda ne
+                    propustite destinaciju Španija!</p>
+                <p class="st-location-name">Španija</p>
+
+            </div>
+            <div class="st-great-britain">
+                <img src="/img/Velika Britanija.png" alt="">
+                <p class="st-text">Isprobajte destinaciju Velika Britanija za svoje sledeće putovanje! Dok ste tamo
+                    šoping, pejzaž i relaksacija se ne smeju propustiti.</p>
+                <p class="st-location-name">Velika Britanija</p>
+            </div>
+        </div>
+    </div>
+    <div class="st-footer-holder">
+        <div class="st-footer">
+            <h2 class="st-title">Uštedite vreme, uštedite novac!</h2>
+            <p class="st-subscribe">Prijavite se i poslaćemo vam najbolje ponude</p>
+            <div class="st-subscribe-holder">
+                <input class="st-give-mail" type="email" placeholder="Vaša adresa e-pošte" id="">
+                <input class="st-submit" type="submit" value="Prijavite se">
+            </div>
+            <br>
+            <p class="st-send-me">
+                <input type="checkbox" name="" id="">
+                Pošalji mi link za preuzimanje BESPLATNE Booking.com aplikacije!
+            </p>
+        </div>
+    </div>
+    <div class="st-add-object">
+        <input type="button" value="Dodajte svoj objekat">
+    </div>
+    <div class="st-version-picker">
+        <div class="st-navigation">
+            <span>Tablet verzija</span>
+            <span>Mobilna verzija</span>
+            <span>Vaš nalog</span>
+            <span>Izmenite svoju rezervaciju onlajn</span>
+            <span>Pomoć korisničkog centra</span>
+            <span>Postanite distributivni partner</span>
+            <span>Poslovni Booking.com</span>
+        </div>
+    </div>
+    <div class="st-links">
+        <ul>
+            <li>Zemlje</li>
+            <li>Regije</li>
+            <li>Gradovi</li>
+            <li>Četvrti</li>
+            <li>Aerodromi</li>
+            <li>Hoteli</li>
+            <li>Znamenitosti</li>
+        </ul>
+        <ul>
+            <li>Privatni smeštaji</li>
+            <li>Apartmani</li>
+            <li>Rizortovi</li>
+            <li>Vile</li>
+            <li>Hosteli</li>
+            <li>Pansioni sa uslugom doručka</li>
+            <li>Pansioni</li>
+        </ul>
+        <ul>
+            <li>Jedinstvena mesta za boravak</li>
+            <li>Sve destinacije</li>
+            <li>Recenzije</li>
+        </ul>
+        <ul>
+            <li>Iznajmljivanje automobila</li>
+            <li>Pretraživanje letova</li>
+            <li>Rezervacije restorana</li>
+            <li>Booking.com za Putne agente</li>
+        </ul>
+        <ul>
+            <li> О Booking.com-u</li>
+            <li> Pomoć Korisničkog servisa</li>
+            <li> Podrška za partnere</li>
+            <li> Careers</li>
+            <li> Centar za medije</li>
+            <li> Centar za informacije o sigurnosti</li>
+            <li> Saradnja sa investitorima</li>
+            <li> Uslovi i odredbe</li>
+            <li> Izjava o privatnosti i kolačićima</li>
+            <li> Poslovni kontakt</li>
+        </ul>
+    </div>
+    <p class="st-support">
+        Ko god da ste, šta god da tražite, mi imamo savršeno mesto za vas. Naših 29 002 806 smeštajnih objekata,
+        uključujući 6 236 217 kuća, apartmana i drugih jedinstvenih mesta za boravak, nalaze se na 153 519 destinacija u
+        227 država i teritorija. Booking.com B.V. ima sedište u Amsterdamu, u Holandiji, sa međunarodnom podrškom
+        <span>198
+            kancelarija u 70 država.</span>
+    </p>
+    <p class="st-ekstranet">
+        Prijava na Ekstranet
+    </p>
+    <p class="st-copyrights">Autorska prava © 1996–2019 Booking.com™. Sva prava zadržana.
+    </p>
+    <p class="st-about-us">
+        Booking.com je deo grupacije Booking Holdings Inc., vodeće svetske kompanije za onlajn putovanja i prateće
+        usluge.
+    </p>
+    <div class="st-partners">
+        <img src="https://r-cf.bstatic.com/static/img/tfl/group_logos/logo_booking/27c8d1832de6a3123b6ee45b59ae2f81b0d9d0d0.png"
+            alt=" ">
+        <img src="https://q-cf.bstatic.com/static/img/tfl/group_logos/logo_priceline/f80e129541f2a952d470df2447373390f3dd4e44.png"
+            alt=" ">
+        <img src="https://r-cf.bstatic.com/static/img/tfl/group_logos/logo_kayak/83ef7122074473a6566094e957ff834badb58ce6.png"
+            alt=" ">
+        <img src="https://r-cf.bstatic.com/static/img/tfl/group_logos/logo_agoda/3d4f6ca8a45a376f2193f1e88d1ac8369f585e76.png"
+            alt=" ">
+        <img src="https://r-cf.bstatic.com/static/img/tfl/group_logos/logo_rentalcars/6bc5ec89d870111592a378bbe7a2086f0b01abc4.png"
+            alt=" ">
+        <img src="https://r-cf.bstatic.com/static/img/tfl/group_logos/logo_opentable/a4b50503eda6c15773d6e61c238230eb42fb050d.png"
+            alt=" ">
+    </div>
 </body>
