--- a/index.html
+++ b/index.html
@@ -51,10 +51,15 @@
                 <i class="far fa-calendar-alt"></i>
             </div>
             <div class="st-low-res-date">
-                <input type="text" class="st-input" value="Prijavljivanje">
-                <i class="far fa-calendar-alt"></i>
-                <input type="text" class="st-input" value="Odjavljivanje">
-                <i class="far fa-calendar-alt"></i>
+                <div class="st-sign-in">
+                    <input type="text" class="st-input" value="Prijavljivanje">
+                    <i class="far fa-calendar-alt"></i>
+                </div>
+
+                <div class="st-sign-in">
+                    <input type="text" class="st-input" value="Odjavljivanje">
+                    <i class="far fa-calendar-alt"></i>
+                </div>
             </div>
             <div class="st-count">
                 <input type="text" class="st-input st-persons" value="2 odrasla  ·  0 dece  ·  1 jedinica">
