--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <div class="st-header">
         <div class="st-top">
-            <img class="st-logo" src="/img/logo.svg" alt=" ">
+            <img class="st-logo" src="./img/logo.svg" alt=" ">
             <input type="button" class="st-sign st-button" value="Ulogujte se">
             <input type="button" class="st-register st-button" value="Registrujte se">
             <input type="button" class="st-import" value="Dodajte svoj objekat">
-            <img src="/img/flag.png" alt=" " class="st-flag">
+            <img src="./img/flag.png" alt=" " class="st-flag">
             <span class="st-currency">RSD</span>
         </div>
         <div class="st-bottom">
@@ -75,7 +75,7 @@
         </div>
     </div>
     <div class="st-special-offer">
-        <img src="/img/special.png" alt=" ">
+        <img src="./img/special.png" alt=" ">
         <p class="st-bold">Vansezonske ponude</p>
         <p class="st-description">Raspust je gotov, ali vaš odmor nije. Ušteda od 20% tokom septembra i oktobra.</p>
         <input type="button" value="Ponude">
@@ -84,7 +84,7 @@
     <div class="st-images">
         <div class="st-image-holder">
             <div class="st-first">
-                <p class="st-title">Sankt Peterburg <img src="/img/flag-russia.png" alt=" "></p>
+                <p class="st-title">Sankt Peterburg <img src="./img/flag-russia.png" alt=" "></p>
                 <p class="st-objects">Najbolji razlog za posetu: <br>
                     <span>arhitektura, razgledanje, setnje gradom</span></p>
                 <p class="st-check">Da li ste jos uvek zainteresovani za svoje prethodne pretrage na destinaciji
@@ -97,8 +97,8 @@
                 <div class="st-icon-holder"><i class="fas fa-times"></i></div>
             </div>
             <div class="st-second">
-                <img src="/img/icon.png" alt=" " class="st-icon">
-                <p class="st-title">Moskva <img src="/img/flag-russia.png" alt=" "></p>
+                <img src="./img/icon.png" alt=" " class="st-icon">
+                <p class="st-title">Moskva <img src="./img/flag-russia.png" alt=" "></p>
                 <p class="st-objects">8 527 smeštajnih objekata </p>
                 <p class="st-average-price">Prosečna cena<br> <span class="st-price">RSD 9.148</span></p>
                 <div class="st-icon-holder"><i class="fas fa-times"></i></div>
@@ -107,22 +107,22 @@
         </div>
         <div class="st-second-row">
             <div class="st-first st-image">
-                <img src="/img/icon.png" alt=" " class="st-icon">
-                <p class="st-title">Kijev <img src="/img/flag-ukraine.png" alt=""> </p>
+                <img src="./img/icon.png" alt=" " class="st-icon">
+                <p class="st-title">Kijev <img src="./img/flag-ukraine.png" alt=""> </p>
                 <p class="st-objects-number">3 763 smeštajnih objekata</p>
                 <p class="st-price">Prosečna cena <span>RSD 8.958</span></p>
                 <i class="fas fa-times"></i>
             </div>
             <div class="st-second st-image">
-                <img src="/img/icon.png" alt=" " class="st-icon">
-                <p class="st-title">Riga <img src="/img/flag-latvia.png" alt=""> </p>
+                <img src="./img/icon.png" alt=" " class="st-icon">
+                <p class="st-title">Riga <img src="./img/flag-latvia.png" alt=""> </p>
                 <p class="st-objects-number">1468 smeštajnih objekata</p>
                 <p class="st-price">Prosečna cena <span>RSD 10.960</span></p>
                 <i class="fas fa-times"></i>
             </div>
             <div class="st-third st-image">
-                <img src="/img/icon.png" alt=" " class="st-icon">
-                <p class="st-title">Helsinki <img src="/img/flag-finland.ico" alt=""> </p>
+                <img src="./img/icon.png" alt=" " class="st-icon">
+                <p class="st-title">Helsinki <img src="./img/flag-finland.ico" alt=""> </p>
                 <p class="st-objects-number">952 smeštajnih objekata</p>
                 <p class="st-price">Prosečna cena <span>RSD 22.998</span></p>
                 <i class="fas fa-times"></i>
@@ -130,7 +130,7 @@
         </div>
     </div>
     <div class="st-accommodation">
-        <p class="st-title">Milioni privatnih smeštaja, velikih i malih... a mislili ste da nudimo samo hotele</p>
+        <p class="st-title">Milioni privatnih smeštaja, velikih i malih.. a mislili ste da nudimo samo hotele</p>
         <div class="st-sorts">
             <div class="st-apartments st-type">
                 <p class="st-type">Apartmani</p>
@@ -154,10 +154,10 @@
             </div>
         </div>
         <div class="st-private-rooms">
-            <p class="st-title">Više od hotela... otkrijte potpuni komfor uz privatni smeštaj</p>
+            <p class="st-title">Više od hotela.. otkrijte potpuni komfor uz privatni smeštaj</p>
             <div class="st-offers">
                 <div class="st-domina">
-                    <!-- <img src="/img/domina.png" alt=""> -->
+                    <!-- <img src="./img/domina.png" alt=""> -->
                     <p class="st-name">Villa Domina</p>
                     <p class="st-location">Split</p>
                     <p class="st-price">Od RSD 10.446</p>
@@ -165,13 +165,13 @@
                         </span><span class="st-rec-num">. 693 recenzija</span></p>
                 </div>
                 <div class="st-annabel">
-                    <!-- <img src="/img/annabel.png" alt=""> -->
+                    <!-- <img src="./img/annabel.png" alt=""> -->
                     <p class="st-name">Annabel's Luxury suites</p>
                     <p class="st-location">Imerovigli</p>
                     <p class="st-price">Od RSD 75.026</p>
                 </div>
                 <div class="st-elegant">
-                    <!-- <img src="/img/elegant.png" alt=""> -->
+                    <!-- <img src="./img/elegant.png" alt=""> -->
                     <p class="st-name">Elegat & Stylish Apartment city center</p>
                     <p class="st-location">Budimpešta</p>
                     <p class="st-price">Od RSD 50.941</p>
@@ -179,7 +179,7 @@
                         </span><span class="st-rec-num">. 64 recenzija</span></p>
                 </div>
                 <div class="st-belinskogo">
-                    <!-- <img src="/img/belinskogo.png" alt=""> -->
+                    <!-- <img src="./img/belinskogo.png" alt=""> -->
                     <p class="st-name">Apartments on Belinskogo ulitsa</p>
                     <p class="st-location">Sankt Peterburg</p>
                     <p class="st-price">Od RSD 34.177</p>
@@ -190,7 +190,7 @@
         </div>
     </div>
     <div class="st-register">
-        <img src="/img/register.png" alt=" ">
+        <img src="./img/register.png" alt=" ">
         <p class="st-main">Registrujte se da biste videli Tajne ponude</p>
         <p class="st-prices">Cene padaju onog trenutka kada se registrujete!</p>
         <input type="email" placeholder="Unesite adresu e-pošte" id="">
@@ -382,32 +382,32 @@
     <div class="st-things-holder">
         <div class="st-things-to-enjoy">
             <div class="st-sad">
-                <img src="/img/USA.png" alt=" ">
+                <img src="./img/USA.png" alt=" ">
                 <p class="st-text">Stvari u kojima morate uživati prilikom svoje sledeće posete destinaciji Sjedinjene
                     Američke Države su relaksacija, restorani i šoping!</p>
                 <p class="st-location-name">Sjedinjene Američke Države</p>
             </div>
             <div class="st-italy">
-                <img src="/img/Italija.png" alt=" ">
+                <img src="./img/Italija.png" alt=" ">
                 <p class="st-text">Stvari u kojima morate uživati prilikom svoje sledeće posete destinaciji Italija su
                     pejzaž, stari grad i hrana!</p>
                 <p class="st-location-name">Italija</p>
             </div>
             <div class="st-france">
-                <img src="/img/Francuska.png" alt=" ">
+                <img src="./img/Francuska.png" alt=" ">
                 <p class="st-text">Stvari koje ne smete propustiti prilikom svoje sledeće posete destinaciji Francuska
                     su tišina, pejzaž i stari grad!</p>
                 <p class="st-location-name">Francuska</p>
             </div>
             <div class="st-spain">
-                <img src="/img/Spanija.png" alt="">
+                <img src="./img/Spanija.png" alt="">
                 <p class="st-text">Ako su tišina, hrana i stari grad vaš način da prijatno provedete vreme, onda ne
                     propustite destinaciju Španija!</p>
                 <p class="st-location-name">Španija</p>
 
             </div>
             <div class="st-great-britain">
-                <img src="/img/Velika Britanija.png" alt="">
+                <img src="./img/Velika Britanija.png" alt="">
                 <p class="st-text">Isprobajte destinaciju Velika Britanija za svoje sledeće putovanje! Dok ste tamo
                     šoping, pejzaž i relaksacija se ne smeju propustiti.</p>
                 <p class="st-location-name">Velika Britanija</p>
@@ -503,17 +503,17 @@
         usluge.
     </p>
     <div class="st-partners">
-        <img src="https://r-cf.bstatic.com/static/img/tfl/group_logos/logo_booking/27c8d1832de6a3123b6ee45b59ae2f81b0d9d0d0.png"
+        <img src="./img/booking.png"
             alt=" ">
-        <img src="https://q-cf.bstatic.com/static/img/tfl/group_logos/logo_priceline/f80e129541f2a952d470df2447373390f3dd4e44.png"
+        <img src="./img/priceline.png"
             alt=" ">
-        <img src="https://r-cf.bstatic.com/static/img/tfl/group_logos/logo_kayak/83ef7122074473a6566094e957ff834badb58ce6.png"
+        <img src="./img/kayak.png"
             alt=" ">
-        <img src="https://r-cf.bstatic.com/static/img/tfl/group_logos/logo_agoda/3d4f6ca8a45a376f2193f1e88d1ac8369f585e76.png"
+        <img src="./img/agoda.png"
             alt=" ">
-        <img src="https://r-cf.bstatic.com/static/img/tfl/group_logos/logo_rentalcars/6bc5ec89d870111592a378bbe7a2086f0b01abc4.png"
+        <img src="./img/rentalcars.png"
             alt=" ">
-        <img src="https://r-cf.bstatic.com/static/img/tfl/group_logos/logo_opentable/a4b50503eda6c15773d6e61c238230eb42fb050d.png"
+        <img src="./img/opentable.png"
             alt=" ">
     </div>
 </body>
