--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
                 <img src="./img/icon.png" alt=" " class="st-icon">
                 <p class="st-title">Kijev <img src="./img/flag-ukraine.png" alt=""> </p>
                 <p class="st-objects-number">3 763 smeštajnih objekata</p>
-                <p class="st-price">Prosečna cena <span>RSD 8.958</span></p>
+                <p class="st-price">Prosečna cena <br><span>RSD 8.958</span></p>
                 <i class="fas fa-times"></i>
             </div>
             <div class="st-second st-image">
                 <img src="./img/icon.png" alt=" " class="st-icon">
                 <p class="st-title">Riga <img src="./img/flag-latvia.png" alt=""> </p>
                 <p class="st-objects-number">1468 smeštajnih objekata</p>
-                <p class="st-price">Prosečna cena <span>RSD 10.960</span></p>
+                <p class="st-price">Prosečna cena <br><span>RSD 10.960</span></p>
                 <i class="fas fa-times"></i>
             </div>
             <div class="st-third st-image">
                 <img src="./img/icon.png" alt=" " class="st-icon">
                 <p class="st-title">Helsinki <img src="./img/flag-finland.ico" alt=""> </p>
                 <p class="st-objects-number">952 smeštajnih objekata</p>
-                <p class="st-price">Prosečna cena <span>RSD 22.998</span></p>
+                <p class="st-price">Prosečna cena <br><span>RSD 22.998</span></p>
                 <i class="fas fa-times"></i>
             </div>
         </div>
