--- a/index.html
+++ b/index.html
@@ -22,19 +22,24 @@
         </div>
         <div class="st-bottom">
             <span class="st-accommadation st-selected">
-                <i class="fas fa-building"></i> Smeštaj
+                <div class="st-icon-container">
+                    <i class="fas fa-building"></i></div> Smeštaj
             </span>
             <span class="st-flight st-unselected">
-                <i class="fas fa-plane-departure"></i> Letovi
+                <div class="st-icon-container">
+                    <i class="fas fa-plane-departure"></i></div> Letovi
             </span>
             <span class="st-rent st-unselected">
-                <i class="fas fa-car"></i> Iznajmljivanje automobila
+                <div class="st-icon-container">
+                    <i class="fas fa-car"></i></div> Iznajmljivanje automobila
             </span>
             <span class="st-tour st-unselected">
-                <i class="fas fa-dharmachakra"></i> Obilasci i aktivnosti
+                <div class="st-icon-container">
+                    <i class="fas fa-dharmachakra"></i></div> Obilasci i aktivnosti
             </span>
             <span class="st-taxi st-unselected">
-                <i class="fas fa-taxi"></i> Taksi od/do aerodroma
+                <div class="st-icon-container">
+                    <i class="fas fa-taxi"></i></div> Taksi od/do aerodroma
             </span>
         </div>
     </div>
@@ -69,8 +74,10 @@
                 <input type="button" class="st-input" value="Traži">
             </div>
             <div class="st-bussiness">
-                <input type="checkbox" class="st-input">
-                <span>Putujem poslovno</span>
+                <label class="container">
+                    <input type="checkbox">
+                    <span> Putujem poslovno
+                    </span>
             </div>
         </div>
     </div>
@@ -503,17 +510,11 @@
         usluge.
     </p>
     <div class="st-partners">
-        <img src="./img/booking.png"
-            alt=" ">
-        <img src="./img/priceline.png"
-            alt=" ">
-        <img src="./img/kayak.png"
-            alt=" ">
-        <img src="./img/agoda.png"
-            alt=" ">
-        <img src="./img/rentalcars.png"
-            alt=" ">
-        <img src="./img/opentable.png"
-            alt=" ">
+        <img src="./img/booking.png" alt=" ">
+        <img src="./img/priceline.png" alt=" ">
+        <img src="./img/kayak.png" alt=" ">
+        <img src="./img/agoda.png" alt=" ">
+        <img src="./img/rentalcars.png" alt=" ">
+        <img src="./img/opentable.png" alt=" ">
     </div>
 </body>
